--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -1,3 +1,7 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
+@import url('https://rsms.me/inter/inter.css');
+
 /*
  * 
  * MESSAGE BAR
@@ -7,6 +11,8 @@
   border: 2px solid #00f;
   border-radius: 3px;
   margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 40px;
 }
@@ -30,6 +36,8 @@ input::-webkit-input-placeholder {
 .btn-send {
   color: #00f;
   background: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-family: 'Inter', sans-serif; 
   font-size: 1.2rem;
@@ -44,6 +52,8 @@ input::-webkit-input-placeholder {
   border-radius: 3px;
   margin: 4px;
   background: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   font-size: 1.2rem;
   text-align: center;
@@ -51,7 +61,8 @@ input::-webkit-input-placeholder {
 
 .btn-send:hover, .btn-voice:hover {
   cursor: pointer;
-  filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
 }
 
 /*animation*/
@@ -69,23 +80,40 @@ input::-webkit-input-placeholder {
   border-radius: 50%;
   margin-right: 3px;
   background: #00f;
-  animation: wave 1.3s linear infinite;
+  -webkit-animation: wave 1.3s linear infinite;
+          animation: wave 1.3s linear infinite;
 }
 #wave .dot:nth-child(2) {
-  animation-delay: -1.1s;
+  -webkit-animation-delay: -1.1s;
+          animation-delay: -1.1s;
 }
 
 #wave .dot:nth-child(3) {
-  animation-delay: -0.9s;
+  -webkit-animation-delay: -0.9s;
+          animation-delay: -0.9s;
+}
+
+@-webkit-keyframes wave {
+  0%, 60%, 100% {
+    -webkit-transform: initial;
+            transform: initial;
+  }
+
+  30% {
+    -webkit-transform: translateY(-6px);
+            transform: translateY(-6px);
+  }
 }
 
 @keyframes wave {
   0%, 60%, 100% {
-    transform: initial;
+    -webkit-transform: initial;
+            transform: initial;
   }
 
   30% {
-    transform: translateY(-6px);
+    -webkit-transform: translateY(-6px);
+            transform: translateY(-6px);
   }
 }
 /*
@@ -95,9 +123,12 @@ input::-webkit-input-placeholder {
  */
 
 .single-button {
+  font-family: 'Inter', sans-serif; 
   border: 2px solid #00f;
   border-radius: 2px;
   margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   height: 40px;
 }
@@ -112,10 +143,18 @@ input::-webkit-input-placeholder {
   font-style: italic;
 }
 .double-button {
+  font-family: 'Inter', sans-serif; 
   margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   height: 40px;
 }
 .double-button > .single-button {
@@ -126,5 +165,6 @@ input::-webkit-input-placeholder {
 
 .single-button:hover, .double-button:hover {
   cursor: pointer;
-  filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+          filter: grayscale(1);
 }
