--- a/src/styles/Top.css
+++ b/src/styles/Top.css
@@ -1,19 +1,24 @@
+/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+
+@import url('https://rsms.me/inter/inter.css');
+
 /*
  * 
  * HEADER
  *
  */
+ 
 .container header {
   background: #fff;
   border:  2px solid #00f;
   border-radius:3px;
   margin: 10px;
   height: 40px;
-}
-.container header h1 {
+  line-height: 40px;
   color:#00f;
   font-family: 'Inter', sans-serif; 
   font-size: 1.2rem;
+  font-weight: 700;
   vertical-align: middle;
   text-align: center;
   text-transform: uppercase;
